--- a/slides/index.html
+++ b/slides/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8"/>
-<title>Mass and species balances</title>
+<title>Module overview</title>
 <meta name="author" content="(Leo Lue)"/>
 <style type="text/css">
 .underline { text-decoration: underline; }
@@ -39,8 +39,8 @@
 
 
 <section>
-<section id="slide-org67e8594">
-<h2 id="org67e8594">CP213: Applied Mathematics and Problem Solving</h2>
+<section id="slide-org122ac0f">
+<h2 id="org122ac0f">CP213: Applied Mathematics and Problem Solving</h2>
 <ul>
 <li><a href="./intro_notes-2020.html">Module overview</a>: week 0</li>
 <li><a href="./python_notes.html">Introduction to Python</a>: week 1</li>
@@ -55,6 +55,97 @@
 <li><a href="./multivariate_notes.html">Multivariate calculus</a>: weeks 9-10</li>
 
 </ul>
+
+<p>
+For an overview of the module structure, hit &lt;ESC&gt;.  To return
+to this view, hit &lt;ESC&gt; again.
+</p>
+
+</section>
+</section>
+<section>
+<section id="slide-orgc374b55">
+<h2 id="orgc374b55">Introduction to Python</h2>
+<p>
+Week 1
+</p>
+
+<p>
+For on-line materials, click <a href="./python_notes.html">here</a>.
+</p>
+
+</section>
+</section>
+<section>
+<section id="slide-org9a7ef19">
+<h2 id="org9a7ef19">Differential balances</h2>
+<p>
+Weeks 2-4
+</p>
+
+<ul>
+<li><a href="./mass_notes.html">Mass and species balances</a></li>
+<li><a href="./energy_notes.html">energy balances</a></li>
+<li><a href="./momentum_notes.html">Momentum/force balances</a></li>
+
+</ul>
+
+
+</section>
+<section id="slide-orgb2c5043">
+<h3 id="orgb2c5043">Mass and species balances</h3>
+</section>
+<section id="slide-org30008e9">
+<h3 id="org30008e9">Energy balance</h3>
+</section>
+<section id="slide-org3a33013">
+<h3 id="org3a33013">Momentum and force balances</h3>
+
+</section>
+</section>
+<section>
+<section id="slide-org65fcb1d">
+<h2 id="org65fcb1d">Ordinary differential equations</h2>
+<p>
+Weeks 5-8
+</p>
+
+<ul>
+<li><a href="./ode_notes.html">Ordinary differential equations</a>: weeks 5-8</li>
+
+</ul>
+
+</section>
+<section id="slide-org6c7c98e">
+<h3 id="org6c7c98e">First order</h3>
+</section>
+<section id="slide-org705b1d5">
+<h3 id="org705b1d5">Second order</h3>
+</section>
+<section id="slide-orgbd14941">
+<h3 id="orgbd14941">Numerical methods</h3>
+
+</section>
+</section>
+<section>
+<section id="slide-org35262f0">
+<h2 id="org35262f0">Multivariate calculus</h2>
+<p>
+Weeks 9-10
+</p>
+
+<ul>
+<li><a href="./multivariate_notes.html">Multivariate calculus</a>: weeks 9-10</li>
+
+</ul>
+
+</section>
+<section id="slide-orge7852db">
+<h3 id="orge7852db">Partial derivatives</h3>
+
+</section>
+<section id="slide-org168a141">
+<h3 id="org168a141">Multiple integration</h3>
 </section>
 </section>
 </div>
