--- a/slides/mass_notes.html
+++ b/slides/mass_notes.html
@@ -39,16 +39,16 @@
 <script src="../../reveal.js-plugins/audio-slideshow/RecordRTC.js"></script>
 
 <section>
-<section id="slide-org258a60e">
-<h2 id="org258a60e">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org172d3cb">
+<h2 id="org172d3cb">CP213: Applied mathematics and problem solving</h2>
 <h2>Mass and species balances</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
 </section>
 </section>
 <section>
-<section id="slide-org5923566">
-<h2 id="org5923566">Overview</h2>
+<section id="slide-org7c8f77e">
+<h2 id="org7c8f77e">Overview</h2>
 <ul>
 <li>Mass balances
 <ul>
@@ -74,13 +74,13 @@ We start our discussion of balances with the mass balance.
 </section>
 </section>
 <section>
-<section id="slide-orge5cfa0a">
-<h2 id="orge5cfa0a">Tank filling &amp; draining</h2>
-<div class="outline-text-2" id="text-orge5cfa0a">
+<section id="slide-org4988fca">
+<h2 id="org4988fca">Tank filling &amp; draining</h2>
+<div class="outline-text-2" id="text-org4988fca">
 </div>
 </section>
-<section id="slide-org9b8a81b">
-<h3 id="org9b8a81b">Tank filling</h3>
+<section id="slide-org2a6c44f">
+<h3 id="org2a6c44f">Tank filling</h3>
 <p>
 Mass balance:
 </p>
@@ -99,8 +99,8 @@ nil
 
 
 </section>
-<section id="slide-org876ead6">
-<h3 id="org876ead6">Determining the flow rate</h3>
+<section id="slide-orgb0c73da">
+<h3 id="orgb0c73da">Determining the flow rate</h3>
 <aside class="notes">
 <p>
 
@@ -138,8 +138,8 @@ V &= A h
 </aside>
 
 </section>
-<section id="slide-orgc17773d">
-<h3 id="orgc17773d">Time varying measurement</h3>
+<section id="slide-orgb0d84de">
+<h3 id="orgb0d84de">Time varying measurement</h3>
 <aside class="notes">
 <p>
 
@@ -191,8 +191,8 @@ time \(t\) by
 </aside>
 
 </section>
-<section id="slide-orgfd5074b">
-<h3 id="orgfd5074b">Determining the water level</h3>
+<section id="slide-orgd0024e3">
+<h3 id="orgd0024e3">Determining the water level</h3>
 <aside class="notes">
 <p>
 
@@ -255,8 +255,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org8c23f25">
-<h3 id="org8c23f25">Tank drainage</h3>
+<section id="slide-orge536cab">
+<h3 id="orge536cab">Tank drainage</h3>
 <aside class="notes">
 <p>
 
@@ -265,8 +265,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org8518738">
-<h3 id="org8518738"></h3>
+<section id="slide-org375978a">
+<h3 id="org375978a"></h3>
 <aside class="notes">
 <p>
 
@@ -275,8 +275,8 @@ The rate of
 </aside>
 
 </section>
-<section id="slide-org662408a">
-<h3 id="org662408a">Combining draining and filling</h3>
+<section id="slide-org9984561">
+<h3 id="org9984561">Combining draining and filling</h3>
 <p>
 Mass balance:
 </p>
@@ -292,13 +292,51 @@ Mass balance:
 </section>
 </section>
 <section>
-<section id="slide-org7f15fcf">
-<h2 id="org7f15fcf">Species balance</h2>
+<section id="slide-org56e864f">
+<h2 id="org56e864f">Distributed flow</h2>
+<div class="outline-text-2" id="text-org56e864f">
+</div>
+</section>
+<section id="slide-org2691377">
+<h3 id="org2691377">velocity and volumetric flowrate</h3>
+<aside class="notes">
+<p>
+
+</p>
+
+<p>
+In first year, you have seen the connection between the velocity of a
+fluid and the volumetric flow rate.  
+</p>
+
+<p>
+Note that we have already used this relationship to develop the mass
+(or volume) balance for the tank filling/drainage problem.  The key
+relationship was:
+</p>
+
+<p>
+dV = A dh
+</p>
+
+</aside>
+
 </section>
 </section>
 <section>
-<section id="slide-orgd93cbf7">
-<h2 id="orgd93cbf7">Summary</h2>
+<section id="slide-orgbe9475f">
+<h2 id="orgbe9475f">Species balance</h2>
+<div class="outline-text-2" id="text-orgbe9475f">
+</div>
+</section>
+<section id="slide-org2555380">
+<h3 id="org2555380"></h3>
+
+</section>
+</section>
+<section>
+<section id="slide-org644fbb4">
+<h2 id="org644fbb4">Summary</h2>
 </section>
 </section>
 </div>
