--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -22,7 +22,6 @@
         document.getElementsByTagName( 'head' )[0].appendChild( link );
     }
 </script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 </head>
 <body>
 <div class="reveal">
@@ -45,8 +44,8 @@
 
 
 <section>
-<section id="slide-orgaf7a243">
-<h2 id="orgaf7a243">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-org465a22b">
+<h2 id="org465a22b">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
@@ -70,9 +69,9 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org0195da0">
-<h2 id="org0195da0">Overview</h2>
-<p class="fragment" data-audio-src="intro/overview.mp3"></p>
+<section id="slide-org476a0e2">
+<h2 id="org476a0e2">Overview</h2>
+<p class="fragment" data-audio-src="intro/overview.ogg"></p>
 
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
@@ -150,8 +149,8 @@ course.
 </aside>
 
 </section>
-<section id="slide-orgb5b9241">
-<h3 id="orgb5b9241">Components of assessment</h3>
+<section id="slide-orgcad5816">
+<h3 id="orgcad5816">Components of assessment</h3>
 <p class="fragment" data-audio-src="intro/componentsofassessment.ogg"></p>
 
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
@@ -253,53 +252,85 @@ Exam
 </aside>
 
 
-
-
 </section>
 </section>
 <section>
-<section id="slide-orgb68e14c">
-<h2 id="orgb68e14c">Learning objectives</h2>
+<section id="slide-org6a50cf9">
+<h2 id="org6a50cf9">Key learning objectives</h2>
+<p class="fragment" data-audio-src="intro/keylearningobjectives.ogg"></p>
+
+
 <ul>
-<li>Mathematical skills</li>
 <li>Problem solving</li>
-<li>programming / Python</li>
+<li>Mathematics</li>
+<li>Programming with Python</li>
 
 </ul>
 
 
+
 <aside class="notes">
+<p>
+
+</p>
+
 <p>
 The learning objectives for this module can be divided into three main
-areas: revising and reinforcing your prior knowledge of mathematics
-and learning some new mathematical skills, 
+areas. 
 </p>
 
 <p>
-developing problems solving skills
-</p>
-
-</aside>
-
-
-<aside class="notes">
-<p>
-
+The first area is <b>problem solving</b>, which in this module will mainly
+involve formulating mathematical descriptions of different engineering
+problems.
 </p>
 
 <p>
 The biggest challenge in mathematics is typically not the manipulation
 of mathematical expressions or following methods for solving
-equations.  
+equations.  Rather it is understanding how to relate the mathematics
+to real world problems.  Typically, the math problems that we find
+most difficult in school are "word problems".  This because it is hard
+to recognize the connection between elements of the abstract mathematics
+and their concrete incarnations.
+</p>
+
+
+<p>
+The other area we will be addressing is <b>mathematics</b>.  We will be
+developing our ability to analyze and solve the mathematical models
+that we develop.  Part of this will involve revising and reinforcing
+your prior knowledge of mathematics, but we will also cover some new
+material, including analytical and numerical methods for solving
+ equations.
+</p>
+
+
+
+<p>
+Finally, we will be introducing you to programming, using Python.  At
+the most basic level, it provides a more efficient way for you to do
+computations that you would normally perform using your calculator;
+however, it allows you easily repeat your calculations, as well as
+provides a record of exactly how they were done.  However, programming
+is much more powerful that this, and we will explore how it can be
+used to provide solutions to mathematical problems that cannot be
+solved analytically.
+</p>
+
+
+
+
+
+
+<p>
+The ability
+to program&#x2026; document your calculations
 </p>
 
 <p>
-how to relate any
-</p>
-
-<p>
-For example, we might have an exothermic chemical reaction going on in
-a vessel that needs
+which will be analyzing the mathematical models we develop
+and analyzing their behavior.  
 </p>
 
 <p>
@@ -307,28 +338,170 @@ how can we formulate the mathematical equations that describe the
 physical system.
 </p>
 
+
+<p>
+For example, we might have an exothermic chemical reaction going on in
+a vessel that needs
+</p>
+
+<p>
+developing problems solving skills
+</p>
+
+
+<p>
+how to relate any
+</p>
+
+
+<p>
+and learning some new mathematical concepts and
+techniques, and using Python.
+</p>
+
+
+
+
+<p>
+Mathematics:
+</p>
+
+<p>
+This module will review and use concepts in calculus in a deeper
+manner.  
+</p>
+
+<p>
+ordinary differential equations,
+analytical and numerical methods for their solution,
+multivariate calculus, calculus applied to functions of several variables.
+</p>
+
+<p>
+In the second semester, this will include
+</p>
+
+
+<p>
+linear algebra, which involves a better understanding of the abstract
+notion of vector spaces and their applications, 
+</p>
+
+
+<p>
+Python programming:
+</p>
+
+<p>
+Finally, we will be introducing you to programming, using Python.  
+At the most basic level, it will provide a
+</p>
+
+<p>
+The ability
+to program&#x2026; document your calculations
+</p>
+
 </aside>
 
 </section>
-<section id="slide-org6e06f85">
-<h3 id="org6e06f85">balances</h3>
-<div>
-\begin{align*}
-{\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
-\end{align*}
-
-</div>
+<section id="slide-orge346fd0">
+<h3 id="orge346fd0">Prerequisites</h3>
+<p class="fragment" data-audio-src="intro/prerequisites.ogg"></p>
 
 <ul>
-<li>mass / species</li>
-<li>energy</li>
-<li>momentum</li>
+<li>CP101: Basic Principles in Chemical Engineering</li>
+<li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
+<li>MM111/MM112: Mathematics 1B/2B</li>
 
 </ul>
 
+<aside class="notes">
+<p>
+
+</p>
+
+<p>
+This module builds upon material from the first year of the course, in
+particular, the chemical engineering modules CP101 and CP102 and the
+math modules MM111 and MM112.
+</p>
+
+<p>
+From CP101 and 102 you should revise: 
+</p>
+<ul>
+<li>the use of units and conversion between units</li>
+<li>the concept of unit operations and the use of process and block flow diagrams</li>
+<li>elementary material and energy balances</li>
+<li>basic thermodynamics, including heat engines, phase diagrams, and the
+concept of entropy</li>
+<li>chemical reaction kinetics and equilibria, including stoichiometry
+and conversions between mass and molar quantities,</li>
+<li>and mass transfer of heat transfer including radiative heat transfer</li>
+
+</ul>
+
+<p>
+From the modules M111 and M112, you should review 
+</p>
+<ul>
+<li>algebra</li>
+<li>basic trigonometry</li>
+<li>vector analysis, and</li>
+<li>basic calculus</li>
+
+</ul>
+
+<p>
+It is important that you review the materials from these modules, so
+that you are confident that you understand them thoroughly.
+</p>
+
+
+
+
+
+
+
+<ul>
+<li>the use of units and conversions between units</li>
+<li>the concept of unit operations, and the use of process and block
+flow diagrams</li>
+<li>Elementary material and energy balances</li>
+<li>basic thermodynamics, including heat engines, phase diagrams, and
+the concept of entropy and</li>
+<li>chemical reaction kinetics and equilibria, including stoichiometry
+and conversions between mass and molar quantities.</li>
+<li>mass transfer and heat transfer, including radiative heat transfer</li>
+
+</ul>
+
+<p>
+MM111/112
+</p>
+<ul>
+<li>algebra</li>
+<li>trigonometry</li>
+<li>vector analysis</li>
+<li>basic calculus</li>
+
+</ul>
+
+<p>
+this module builds apply material from the first day of the course in
+particular the chemical engineering modules cp101 and cp102 and the
+mathematics modules m 111 and M 112 from cp101 and 102
+</p>
+
+</aside>
+
 </section>
-<section id="slide-org0de2a9d">
-<h3 id="org0de2a9d">Schedule</h3>
+<section id="slide-org6a5cd7a">
+<h3 id="org6a5cd7a">Schedule</h3>
+<p class="fragment" data-audio-src="intro/schedule.ogg"></p
+
+
 <ul>
 <li>Week 1: Python and its applications</li>
 <li>Weeks 2-4: Differential balances</li>
@@ -344,31 +517,63 @@ physical system.
 </p>
 
 <p>
-The schedule for semester 1 
+The planned schedule for semester 1 is shown here.  It is formally
+divided into four main sections.
 </p>
 
 <p>
 In the first week, the programming language Python will be introduced.
-Don't worry, as there is no expectation for you to have any
-prior programming experience.  
+Don't worry, as there is no expectation for you to have any prior
+programming experience.  There will be no need to install any software
+on your computer to do the programming exercises.  Everything will be
+done through Jupyter notebooks, which will be accessible through your
+web browser.
+</p>
+
+
+<p>
+The next three weeks will devoted learning about differential
+balances, which is essentially applying the concepts of mass and
+energy balances that you were introduced to last year to systems that
+are non-uniform or with properties that may vary in time.  
 </p>
 
 <p>
-Python and its applications
+These differential balances will result in equations known as
+differential equations, which relate variables, as well as their
+derivatives to each other.  In weeks 5-8, we will learn methods for
+solving these types of equations.
 </p>
 
 <p>
-Jupyter notebooks, where
+The last topic we will touch on is multivariate calculus, where we
+will examine functions that depend on more than one independent
+variable.  This will allow us to examine problems such as quantifying
+the impact of uncertainty on our calculations, fitting model
+parameters to experimental data, and the diffusion of mass or heat
+through a material.
 </p>
 
 <p>
-The next three weeks will devoted
-Differential balances
+The final week of the semester will be devoted to reviewing the module
+materials.
 </p>
+
+
+
 
 <p>
 using the basic balance equation to develop equations
 to 
+</p>
+
+
+
+
+
+<p>
+Python and its applications, differential balances, ordinary
+differential equations, and multivariate calculus.
 </p>
 
 <p>
@@ -397,194 +602,16 @@ contents of the module.  This will also be an opportunity
 
 </aside>
 
-</section>
-<section id="slide-org958893c">
-<h3 id="org958893c">Review materials</h3>
-<ul>
-<li>CP101: Basic Principles in Chemical Engineering</li>
-<li>CP102: Chemical Engineering: Fundamentals, Techniques and Tools</li>
-<li>MM111/MM112: Mathematics 1B/2B</li>
 
-</ul>
 
-<aside class="notes">
-<p>
-
-</p>
-
-<p>
-This module builds upon
-</p>
-
-<p>
-CP101
-</p>
-<ul>
-<li>Unit conversions.</li>
-<li>Stoichiometry and conversions between mass and molar quantities.</li>
-<li>Reaction equilibria and explanation of change in equilibria with reference to Le Chatelier’s Principle.</li>
-<li>Elementary material balances, including non-reactive, reactive and combustion processes.</li>
-<li>Basic kinetic theory including activation energies.</li>
-<li>Thermochemistry and elementary energy balances.</li>
-
-</ul>
-
-<p>
-CP102:
-</p>
-<ul>
-<li>Modern chemical engineering challenges</li>
-<li>Chemical and industrial processes</li>
-<li>Unit operations, phase diagrams, process and block flow diagrams, stream tables</li>
-<li>Material balances, mass transfer</li>
-<li>Energy conservation, thermodynamics, entropy and heat engines</li>
-<li>Radiative heat and heat transfer/loss</li>
-<li>Renewable energy technologies</li>
-
-</ul>
-
-<p>
-MM111/112
-</p>
-<ul>
-<li>algebra</li>
-<li>trigonometry</li>
-<li>differentiation</li>
-<li>integration</li>
-
-</ul>
-
-</aside>
 
 
 </section>
-</section>
-<section>
-<section id="slide-orgfc3070f">
-<h2 id="orgfc3070f">Topics Covered in Semester 1:</h2>
-<ul>
-<li>Python and its applications</li>
-<li>Differential balances</li>
-<li>Ordinary differential equations</li>
-<li>Multivariate calculus</li>
-
-</ul>
-
-<aside class="notes">
-<p>
-
-</p>
-
-<p>
-In semester 1, the material is divided into four main topic: Python
-and its applications, differential balances, ordinary differential
-equations, and multivariate calculus.
-</p>
-
-</aside>
-
-</section>
-</section>
-<section>
-<section id="slide-org0c620b5">
-<h2 id="org0c620b5">Key concepts</h2>
-<ul>
-<li>algebra</li>
-<li>calculus: differentiation, integration, fundamental theorem</li>
-<li>mass &amp; energy balances</li>
-<li></li>
-
-</ul>
-
-<aside class="notes">
-nil
-</aside>
-
-</section>
-<section id="slide-org30a534c">
-<h3 id="org30a534c">differentiation</h3>
-<div>
-\begin{align*}
-\frac{df}{dx} &= \lim_{\Delta x\to0}\frac{f(x+\Delta x)-f(x)}{\Delta x}
-\end{align*}
-
-</div>
-
-<aside class="notes">
-nil
-</aside>
-
-</section>
-<section id="slide-org279d8b5">
-<h3 id="org279d8b5">integration</h3>
-<div>
-\begin{align*}
-f(x+\Delta x) - f(x) &\approx f'(x) \Delta x
-\end{align*}
-
-</div>
-
-<aside class="notes">
-nil
-</aside>
-
-</section>
-<section id="slide-org0d3e184">
-<h3 id="org0d3e184">fundamental theorem of calculus</h3>
-<div>
-\begin{align*}
-\int_a^b dx \frac{df}{dx} &= f(b) - f(x)
-\end{align*}
-
-</div>
-
-<div>
-\begin{align*}
-\frac{df}{dx} &= f'(x)
-\\
-df &= f'(x) dx
-\end{align*}
-
-</div>
-
-<aside class="notes">
-nil
-</aside>
-
-</section>
-<section id="slide-org52ded4c">
-<h3 id="org52ded4c">balances</h3>
-<div>
-\begin{align*}
-{\rm accumulation} &= {\rm in~flow} - {\rm out~flow} + {\rm generation}
-\end{align*}
-
-</div>
-
-<ul>
-<li>mass / species</li>
-<li>energy</li>
-<li>momentum</li>
-
-</ul>
+<section id="slide-orgfb5027f">
+<h3 id="orgfb5027f">Learning resources</h3>
+<p class="fragment" data-audio-src="intro/learningmaterials.ogg"></p>
 
 
-<aside class="notes">
-nil
-</aside>
-
-</section>
-</section>
-<section>
-<section id="slide-org74a96f5">
-<h2 id="org74a96f5">Format</h2>
-
-
-</section>
-</section>
-<section>
-<section id="slide-org0f322c8">
-<h2 id="org0f322c8">Resources</h2>
 <ul>
 <li><a href="https://classes.myplace.strath.ac.uk/course/view.php?id=21595">Myplace</a> 
 <ul>
@@ -610,28 +637,29 @@ nil
 
 </p>
 
-<ul>
-<li>learning, on-line materials
-<ul>
-<li>Myplace site</li>
-<li>this will consist of video recordings</li>
+<p>
+All learning materials necessary for this module are accessible from
+the Myplace site, which can be reached from the link given here.  This
+includes lecture slides and recordings, Jupyter notebooks, tutorial
+sheets and solutions, links to Zoom sessions, etc.
+</p>
 
-</ul></li>
-<li>lectures, Q&amp;A sessions, and tutorials
-<ul>
-<li>Zoom meetings</li>
-<li>The password will be the course code</li>
+<p>
+All on-line lectures, question and answer sessions, and tutorial
+session are accessible from this Zoom link, which is shown here.
+</p>
 
-</ul></li>
-
-</ul>
+<p>
+Finally, all the main course materials are also available from an
+on-line repository, which can be accessed in the final link shown
+here.  This provides a structured view of the course materials as a
+whole.
+</p>
 
 </aside>
 </section>
-</section>
-<section>
-<section id="slide-org00e3e9a">
-<h2 id="org00e3e9a">Additional resources</h2>
+<section id="slide-org073985d">
+<h3 id="org073985d">Additional resources</h3>
 <p class="fragment" data-audio-src="intro/additionalresources.ogg"></p>
 
 <ul>
@@ -692,8 +720,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org0986056">
-<h2 id="org0986056">Questions?</h2>
+<section id="slide-org8ca7c95">
+<h2 id="org8ca7c95">Questions?</h2>
 <p class="fragment" data-audio-src="intro/questions.ogg"></p>
 
 
