working on links

--- a/slides/intro_notes-2020.html
+++ b/slides/intro_notes-2020.html
@@ -44,12 +44,16 @@
 
 
 <section>
-<section id="slide-org465a22b">
-<h2 id="org465a22b">CP213: Applied mathematics and problem solving</h2>
+<section id="slide-orga63bc9d">
+<h2 id="orga63bc9d">CP213: Applied mathematics and problem solving</h2>
 <h2>Module overview</h2>
 <h3>L Lue<br>Department&nbspof&nbspChemical&nbspand&nbspProcess&nbspEngineering<br>University&nbspof&nbspStrathclyde</h3>
 
-<p class="fragment" data-audio-src="intro/title.ogg"></p>
+<p class="fragment" data-audio-src="intro/title.ogg" 
+title="
+This is a test.
+">
+</p>
 
 
 
@@ -69,10 +73,8 @@ of the module aims and contents.
 </section>
 </section>
 <section>
-<section id="slide-org476a0e2">
-<h2 id="org476a0e2">Overview</h2>
-<p class="fragment" data-audio-src="intro/overview.ogg"></p>
-
+<section id="slide-orgd4f6399" data-audio-src="intro/overview.ogg"  title="This is hover text">
+<h2 id="orgd4f6399">Overview</h2>
 <ul>
 <li>Module leader: Leo Lue &amp; Abdul Sharif</li>
 <li>Demonstrators: Chris Boyle, Umair Jamal, and Tom Stavert</li>
@@ -149,8 +151,8 @@ course.
 </aside>
 
 </section>
-<section id="slide-orgcad5816">
-<h3 id="orgcad5816">Components of assessment</h3>
+<section id="slide-org550f4aa">
+<h3 id="org550f4aa">Components of assessment</h3>
 <p class="fragment" data-audio-src="intro/componentsofassessment.ogg"></p>
 
 <table border="2" cellspacing="0" cellpadding="6" rules="groups" frame="hsides">
@@ -255,8 +257,8 @@ Exam
 </section>
 </section>
 <section>
-<section id="slide-org6a50cf9">
-<h2 id="org6a50cf9">Key learning objectives</h2>
+<section id="slide-org5a7ac7d">
+<h2 id="org5a7ac7d">Key learning objectives</h2>
 <p class="fragment" data-audio-src="intro/keylearningobjectives.ogg"></p>
 
 
@@ -405,8 +407,8 @@ to program&#x2026; document your calculations
 </aside>
 
 </section>
-<section id="slide-orge346fd0">
-<h3 id="orge346fd0">Prerequisites</h3>
+<section id="slide-orga6a60b9">
+<h3 id="orga6a60b9">Prerequisites</h3>
 <p class="fragment" data-audio-src="intro/prerequisites.ogg"></p>
 
 <ul>
@@ -497,8 +499,8 @@ mathematics modules m 111 and M 112 from cp101 and 102
 </aside>
 
 </section>
-<section id="slide-org6a5cd7a">
-<h3 id="org6a5cd7a">Schedule</h3>
+<section id="slide-org4f08968">
+<h3 id="org4f08968">Schedule</h3>
 <p class="fragment" data-audio-src="intro/schedule.ogg"></p
 
 
@@ -607,8 +609,8 @@ contents of the module.  This will also be an opportunity
 
 
 </section>
-<section id="slide-orgfb5027f">
-<h3 id="orgfb5027f">Learning resources</h3>
+<section id="slide-org350bd35">
+<h3 id="org350bd35">Learning resources</h3>
 <p class="fragment" data-audio-src="intro/learningmaterials.ogg"></p>
 
 
@@ -658,8 +660,8 @@ whole.
 
 </aside>
 </section>
-<section id="slide-org073985d">
-<h3 id="org073985d">Additional resources</h3>
+<section id="slide-orgfb0663d">
+<h3 id="orgfb0663d">Additional resources</h3>
 <p class="fragment" data-audio-src="intro/additionalresources.ogg"></p>
 
 <ul>
@@ -720,8 +722,8 @@ class forum on Myplace.
 </section>
 </section>
 <section>
-<section id="slide-org8ca7c95">
-<h2 id="org8ca7c95">Questions?</h2>
+<section id="slide-org719a709">
+<h2 id="org719a709">Questions?</h2>
 <p class="fragment" data-audio-src="intro/questions.ogg"></p>
 
 
@@ -768,7 +770,7 @@ multiplex: {
 // Optional libraries used to extend on reveal.js
 dependencies: [
 ]
-,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'Plugins', icon: '<i class="fa fa-external-link-alt"></i>', src: 'toc.html' }, { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' } ] }, chalkboard: { src: "chalkboard.json", }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
+,menu: { themes: false, transitions: false, markers: true, hideMissingTitles: true, custom: [ { title: 'About', icon: '<i class="fa fa-info"></i>', src: 'about.html' }, { title: 'Links', icon:  '<i class="fa fa-external-link-alt"></i>', src: 'links.html' }, ] }, chalkboard: { src: "chalkboard.json", toggleChalkboardButton: {left: "80px"}, toggleNotesButton: {left: "130px"}, }, keyboard: { 67: function() { RevealChalkboard.toggleNotesCanvas() }, 66: function() { RevealChalkboard.toggleChalkboard() }, 46: function() { RevealChalkboard.clear() }, 8: function() { RevealChalkboard.reset() }, 68: function() { RevealChalkboard.download() }, 88: function() { RevealChalkboard.colorNext() }, 89: function() { RevealChalkboard.colorPrev() }, }, audio: { prefix: 'intro/', suffix: '.ogg', textToSpeechURL: "http://api.voicerss.org/?key=f6810d3ff6e84980b30a10c447b36003&hl=eng-us&c=ogg&src=", defaultNotes: true, defaultText: false, advance: -1, autoplay: true, defaultDuration: 5, defaultAudios: true, playerOpacity: 0.05, playerStyle: 'position: fixed; bottom: 4px; left: 25%; width: 50%; height:75px; z-index: 33;', startAtFragment: false, },});
 </script>
 </body>
 </html>
