--- a/slides/links.html
+++ b/slides/links.html
@@ -1,9 +1,21 @@
 <h1>External Links</h1>
 <ul class="slide-menu-items">
   <li class="slide-menu-item">
-    <a href="https://github.com/denehyg/reveal.js-menu">Reveal.js-menu</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Introduction to Python</a>
   </li>
   <li class="slide-menu-item">
-    <a href="https://github.com/hakimel/reveal.js">Reveal.js</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/energy_notes.html">Energy balances</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Ordinary differential equations</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Multivariate calculus</a>
   </li>
 </ul>
