--- a/slides/links.html
+++ b/slides/links.html
@@ -1,7 +1,13 @@
 <h1>External Links</h1>
 <ul class="slide-menu-items">
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Introduction to Python</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/index.html">Module summary</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/intro_notes-2020.html">Module overview</a>
+  </li>
+  <li class="slide-menu-item">
+    <a href="https://mjksill.github.io/CP213-online/slides/python_notes-2020.html">Introduction to Python</a>
   </li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
@@ -13,9 +19,9 @@
     <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a>
   </li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Ordinary differential equations</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a>
   </li>
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Multivariate calculus</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/multivariate_notes.html">Multivariate calculus</a>
   </li>
 </ul>
