--- a/slides/links.html
+++ b/slides/links.html
@@ -1,14 +1,18 @@
 <h1>External Links</h1>
 <ul class="slide-menu-items">
   <li class="slide-menu-item">
-    <a href="https://mjksill.github.io/CP213-online/slides/index.html">Module summary</a>
+    <a href="https://mjksill.github.io/CP213-online/slides/index.html">Module index</a>
   </li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/intro_notes-2020.html">Module overview</a>
   </li>
+
+  <li class="slide-menu-item menu-section">Week 1</li> 
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/python_notes-2020.html">Introduction to Python</a>
   </li>
+
+  <li class="slide-menu-item menu-section">Weeks 2-4: Differential balances</li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/mass_notes.html">Mass and species balances</a>
   </li>
@@ -18,9 +22,13 @@
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/momentum_notes.html">Momentum/force balances</a>
   </li>
+
+  <li class="slide-menu-item menu-section">Weeks 5-8: Ordinary differential equations</li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/ode_notes.html">Ordinary differential equations</a>
   </li>
+  
+  <li class="slide-menu-item menu-section">Weeks 9-10: Multivariate calculus</li>
   <li class="slide-menu-item">
     <a href="https://mjksill.github.io/CP213-online/slides/multivariate_notes.html">Multivariate calculus</a>
   </li>
